<resources>
    <string name="app_name">Books</string>
    <string name="search">Search</string>
    <string name="networkText">network failed!</string>
    <string name="isbn_10">ISBN 10:</string>
    <string name="isbn_13">ISBN 13:</string>
    <string name="page_count">Page count:</string>
    <string name="rating">Rating:</string>
    <string name="description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_books">Search books…</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_by_author">Search by author</string>
    <string name="search_by_publisher">Search by publisher</string>
    <string name="search_by_isbn">Search by ISBN</string>
    <string name="search_filter">Search filter</string>
    <string name="show_all">Show all</string>
    <string name="e_books">E-books</string>
    <string name="free_ebooks">free-ebooks</string>
    <string name="paid_ebooks">paid-ebooks</string>
</resources>
