<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andyprojects.books.bookDetail.BookDetailFragment">

    <data>
        <variable
            name="bookDetailViewModel"
            type="com.andyprojects.books.bookDetail.BookDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_white"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_padding"
            android:paddingRight="@dimen/standard_padding">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleText="@{bookDetailViewModel.selectedBook.volumeInfo.title}"
                tools:text="Code Like A Teslim" />

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="120dp"
                android:layout_height="196dp"
                app:bookCover="@{bookDetailViewModel.selectedBook.volumeInfo.imageLinks.thumbnail}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_text"
                app:srcCompat="@mipmap/ic_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/book_cover"
                app:layout_constraintTop_toBottomOf="@+id/header_text">

                <TextView
                    android:id="@+id/isbn_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="@dimen/small_padding"
                    android:text="@string/isbn_10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/isbn_10_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/isbn_10_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:isbnTen="@{bookDetailViewModel.selectedBook.volumeInfo.industryIdentifiers}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/isbn_10"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/book_cover"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

                <TextView
                    android:id="@+id/isbn_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="@dimen/small_padding"
                    android:text="@string/isbn_13"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/isbn_13_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/isbn_13_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:isbnThirteen="@{bookDetailViewModel.selectedBook.volumeInfo.industryIdentifiers}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/isbn_13"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="@dimen/small_padding"
                app:layout_constraintBottom_toTopOf="@+id/rating_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/book_cover"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

                <TextView
                    android:id="@+id/page_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="@dimen/small_padding"
                    android:text="@string/page_count"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/page_count_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/page_count_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/page_count"
                    app:layout_constraintTop_toTopOf="parent"
                    app:pageCount="@{bookDetailViewModel.selectedBook.volumeInfo.pageCount}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rating_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                app:starRating="@{bookDetailViewModel.selectedBook.volumeInfo.averageRating}"
                app:layout_constraintBottom_toTopOf="@+id/description_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/book_cover"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="@dimen/small_padding"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/star_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rating"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/star_3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/star_1"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/star_4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/star_2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/star_5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/star_3"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/star_4"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/description_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_cover" />

            <TextView
                android:id="@+id/desc_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingMultiplier="1.5"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="18sp"
                app:description="@{bookDetailViewModel.selectedBook.volumeInfo.description}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_header"
                tools:text="loren ipsum" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>